# KE8YGW-logger

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.sync-server  GOVERNANCE.md  IOS_GAP_ANALYSIS.md  IOS_STATUS.md  LICENSE  PROJECT_STATE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: branch-promotion-policy.yml  ci.yml  ios.yml  release.yml  scorecard.yml  security.yml
.semgrep/: security.yml
ci_scripts/: ci_post_clone.sh
crates/ham-api-contract/: Cargo.toml
crates/ham-api-contract/src/: lib.rs
crates/ham-cli/: Cargo.toml
crates/ham-cli/src/: main.rs
crates/ham-core/: Cargo.toml
crates/ham-core/src/: adif.rs  application_settings.rs  awards.rs  bus.rs  credential.rs  diagnostics.rs  event.rs  lib.rs  lookup.rs  map.rs  net.rs  online.rs  permissions.rs  projection.rs  proposal.rs  rig.rs  runtime_log.rs  search.rs  service.rs  station.rs  store.rs  support.rs  tests.rs  upload.rs
crates/ham-desktop/: Cargo.toml
crates/ham-desktop/src/: lib.rs  main.rs
crates/ham-gui/: Cargo.toml
crates/ham-gui/src/: bridge.rs  commands.rs  lib.rs  main.rs  mock.rs  shell.rs
crates/ham-gui/web/: app.js  index.html  styles.css
crates/ham-ios-ffi/: Cargo.toml
crates/ham-ios-ffi/include/: ham_ios_ffi.h  module.modulemap
crates/ham-ios-ffi/src/: lib.rs
crates/ham-plugin-sdk/: Cargo.toml
crates/ham-plugin-sdk/src/: lib.rs
crates/ham-server/: Cargo.toml
crates/ham-server/src/: lib.rs  main.rs
crates/ham-sync/: Cargo.toml
crates/ham-sync-server/: Cargo.toml
crates/ham-sync-server/src/: main.rs
crates/ham-sync/src/: lib.rs  offline.rs
docs/: API_CLIENT_CONTRACT.md  API_V1_ROUTE_INVENTORY.md  BRANCHING_AND_RELEASE_CHANNELS.md  CI_OPTIMIZATION.md  DESKTOP_RELEASE.md  DEVELOPER_GUIDE.md  EVENT_CATALOG.md  HOSTED_WEB_RELEASE.md  IOS_APPSTORE_READINESS.md  IOS_BUILD_AND_LINKING.md  IOS_MULTICAST_PROVISIONING.md  MASTER_BLUEPRINT.md  PLUGIN_SDK.md  PROVIDER_LIVE_TRANSPORTS.md  PROVIDER_RUNTIME_HARDENING.md  ROADMAP.md  SECURITY_MODEL.md  SYNC_PROTOCOL.md  V0_2_RELEASE_PLAN.md  V0_3_RELEASE_PLAN.md  V0_3_SYNC_QUALIFICATION.md  V1_1_IOS_NATIVE_PLAN.md  V1_EXECUTION_PLAN.md  V1_IOS_NATIVE_PLAN.md  V1_RELEASE_PLAN.md
docs/adr/: 0000-template.md  0001-append-only-official-log.md  0002-runtime-vs-official-events.md  0003-plugin-proposal-write-model.md  0004-global-event-log-plus-projections.md  0005-local-first-sync.md  0006-gui-shell-as-core-client.md  README.md
docs/architecture/: award-engine.md  ios-rust-authority.md  online-services.md  search.md  service-framework.md  station-profiles.md  support-storage.md  upload-queue.md
docs/grid-system/: README.md
docs/maps/: README.md
docs/plugin-map-providers/: README.md
docs/plugins/: net-control.md  online-provider-development.md  provider-development.md
docs/propagation/: README.md
docs/security/: DEPENDENCY_ADVISORIES.md  REPOSITORY_SECURITY_SETTINGS.md  credential-storage.md  credentials-and-redaction.md
docs/weather/: README.md
ios/KE8YGWLogger/: README.md
ios/KE8YGWLogger/KE8YGWLogger.xcodeproj/: project.pbxproj
ios/KE8YGWLogger/KE8YGWLogger.xcodeproj/project.xcworkspace/xcuserdata/user946929.xcuserdatad/: UserInterfaceState.xcuserstate
ios/KE8YGWLogger/KE8YGWLogger.xcodeproj/xcshareddata/xcschemes/: KE8YGWLogger.xcscheme
ios/KE8YGWLogger/KE8YGWLogger/App/: KE8YGWLoggerApp.swift
ios/KE8YGWLogger/KE8YGWLogger/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/KE8YGWLogger/KE8YGWLogger/Features/Dashboard/: DashboardView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Diagnostics/: DiagnosticsView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Logging/: LoggingWorkspaceView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Maps/: MapWorkspaceView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/NetControl/: NetControlView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/POTA/: POTAView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Providers/: ProviderStatusView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/SOTA/: SOTAView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Stations/: StationManagementView.swift
ios/KE8YGWLogger/KE8YGWLogger/Features/Sync/: SyncWorkspaceView.swift
ios/KE8YGWLogger/KE8YGWLogger/Models/: AppSettings.swift  QSO.swift  StationEquipment.swift  StationProfile.swift
ios/KE8YGWLogger/KE8YGWLogger/Resources/: Info.plist
ios/KE8YGWLogger/KE8YGWLogger/Services/: HamRadioUtilities.swift  LogExportService.swift
ios/KE8YGWLogger/KE8YGWLogger/Shared/RustBridge/: RustBridge.swift
ios/KE8YGWLogger/KE8YGWLogger/Shared/Services/: PlatformServices.swift  ProjectionRefreshService.swift
ios/KE8YGWLogger/KE8YGWLogger/Shared/Theme/: AppTheme.swift
ios/KE8YGWLogger/KE8YGWLogger/Views/: ExportView.swift  HomeView.swift  LogbookView.swift  NewQSOView.swift  QSODetailView.swift  RootView.swift  SettingsView.swift  StationProfileView.swift
ios/KE8YGWLogger/KE8YGWLogger/appicon.xcassets/AppIcon.appiconset/: Contents.json
ios/KE8YGWLogger/KE8YGWLoggerTests/: ExportServiceTests.swift  HamRadioUtilitiesTests.swift  ProjectionRefreshServiceTests.swift  RustBridgeTests.swift
ios/KE8YGWLogger/ci_scripts/: ci_post_clone.sh
openapi/: api-v1-baseline.json  api-v1.yaml
scripts/: check_api_contract.py  check_docs_links.py  check_versions.py  governance-check.ps1
scripts/ios/: build-rust.sh  build-xcframework.sh  install-targets.sh  rust-env.sh  verify-linkage.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
