[workspace]
members = [
    "crates/ham-api-contract",
    "crates/ham-core",
    "crates/ham-plugin-sdk",
    "crates/ham-sync",
    "crates/ham-sync-server",
    "crates/ham-server",
    "crates/ham-cli",
    "crates/ham-gui",
    "crates/ham-desktop",
    "src-tauri",
    "crates/ham-ios-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.3.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
socket2 = { version = "0.6", features = ["all"] }
surrealdb = { version = "3.2.1", default-features = false, features = ["kv-surrealkv", "kv-mem", "protocol-ws", "rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
