[package]
name = "ham-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ham-plugin-sdk = { path = "../ham-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq = { version = "2.12", default-features = false, features = ["tls"] }
urlencoding = "2.1"
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
] }
