[package]
name = "ham-ios-ffi"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono.workspace = true
ham-core = { path = "../ham-core" }
ham-plugin-sdk = { path = "../ham-plugin-sdk" }
ham-sync = { path = "../ham-sync" }
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

