[package]
name = "ham-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
ham-core = { path = "../ham-core" }
ham-plugin-sdk = { path = "../ham-plugin-sdk" }
ham-sync = { path = "../ham-sync" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lib]
name = "ham_server"
path = "src/lib.rs"

[[bin]]
name = "ham-server"
path = "src/main.rs"
