[package]
name = "ham-sync-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ham-api-contract = { path = "../ham-api-contract" }
ham-sync = { path = "../ham-sync" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
