[package]
name = "ham-sync"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
ham-core = { path = "../ham-core" }
surrealdb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
