[package]
name = "ham-sync"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
surreal-storage = ["dep:sha2", "dep:surrealdb"]

[dependencies]
chrono.workspace = true
ham-core = { path = "../ham-core" }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
